# adapters — Adapter-Pattern fuer Originalcode (Habich-Direktive)
#
# Pro Paper ein Adapter, der zwischen Original-API und unseren C++23-
# Concepts (FanOutContainer, Page, Node, Traversal, ValueHandleStrategy,
# MemoryLayout, ConcurrencyDiscipline) uebersetzt.
#
# Adapter sind reine C++23-Schalen — kein Original-Compiler-Code hier.
# Kompilation mit Hauptcompiler.

# Skelett — Inhalt kommt nach Repo-Einbindung in Phase 4.B
# add_subdirectory(P01-ART)
# add_subdirectory(P02-HOT)
# ...
